2007-12-07  Kevin Cozens  <kcozens@pc.localdomain>

	* Changes: Updated with information about the pending 2.2 release.

	* Gimp/Fu.pm: Updated information about PF_FONT parameter type.

2007-12-07  Kevin Cozens  <kcozens@pc.localdomain>

	* MANIFEST: Removed examples/guide_remove.

2007-12-07  Kevin Cozens  <kcozens@cvs.gnome.org>

	* TODO: Added notes regarding some additional issues. 

	* scm2perl: Added support for caddr, cadddr, cdddr, and cddddr.

2007-12-03  Kevin Cozens  <kcozens@cvs.gnome.org>

	* examples/guide_remove: Deleting in favour of the Script-Fu script
	which does the same job.

2007-11-22  Kevin Cozens  <kcozens@cvs.gnome.org>

	* Gimp.pm (canonicalize_colour): Added back the lost comment string.
	Simplified previous change to eliminate need for call to split().

	* Gimp/Util.pm (text_draw, image_create_text): Commented out the line
	which sets $font to Helvetica if it was an empty string. The check
	in image_create_text was always setting $font to Helvetica. Added
	FIXME note about this problem. These routines shouldn't be needed.
	Fixes bug #301509.

2007-11-19  Kevin Cozens  <kcozens@cvs.gnome.org>

	* Gimp.pm: Fixed parsing of colour strings of format #ff00ff.

	* Gimp/Lib.xs: INT8ARRAY data uses unsigned 8-bit bytes. Are any other
	changes needed?

2007-11-07  Kevin Cozens  <kcozens@cvs.gnome.org>

	* UI/UI.pm (interact): Set $value to initial value for PF_ADJUSTMENT.
	Fixes bug #494743.

2007-10-31  Kevin Cozens  <kcozens@cvs.gnome.org>

	* Gimp/Compat.pm (xlfd_size): Grab the first item in list of values
	returned from xlfd_unpack() when using XLFD font descriptions.

2007-09-05  Kevin Cozens  <kcozens@cvs.gnome.org>

	* .cvsignore
	* Net/.cvsignore
	* Gimp/.cvsignore
	* po/.cvsignore
	* UI/.cvsignore: Obsolete as of the switch from CVS to Subversion.

	* MAINTAINERS: Added due to enforced gnome-svn standards.

	* MANIFEST: Updated list of files.

2007-07-10  Kevin Cozens  <kcozens@cvs.gnome.org>
